# langchain_jobsdb

./: main.py  pyproject.toml
tools/: llm_scraper.py  webscraper.py
