[project]
name = "langchain-jobsdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "unstructured>=0.18.18",
]
